# sysd

./: README.md
exercises/ai-code-assistant/: README.md  docker-compose.test.yml  go.mod  go.sum
exercises/ai-code-assistant/cmd/api/: main.go
exercises/ai-code-assistant/cmd/cli/: main.go
exercises/ai-code-assistant/configs/: config.example.yaml
exercises/ai-code-assistant/examples/indexer_example/: main.go
exercises/ai-code-assistant/examples/query_chromadb/: main.go
exercises/ai-code-assistant/examples/testdata/: advanced_test.go  sample.go
exercises/cassandra-sstable/: README.md  go.mod
exercises/cassandra-sstable/examples/basic/: go.mod  (+1 more)
exercises/hnsw-poc/: README.md  go.mod
exercises/k8s-controller/: Makefile  PROJECT  README.md  go.mod
exercises/k8s-controller/cmd/: main.go
exercises/kafka-transactional-messaging/: README.md  go.mod
exercises/kafka-transactional-messaging/examples/: simple_example.go
exercises/rocksdb-clone/: Cargo.toml  README.md
exercises/rocksdb-clone/src/: config.rs  error.rs  lib.rs
exercises/rocksdb-clone/src/storage/: memtable.rs  mod.rs  sstable.rs  wal.rs
exercises/rocksdb-clone/src/storage/tests/: mod.rs
exercises/s3-clone/: README.md  go.mod
exercises/s3-clone/docs/: api-reference.md  architecture.md  quickstart.md  s3-deep-dive.md
exercises/simd-poc/: Cargo.toml  DESIGN.md  README.md
exercises/simd-poc/docs/: IMPLEMENTATION.md
exercises/simd-poc/src/: lib.rs  main.rs
exercises/sql-parser/: README.md  go.mod
exercises/wal/: .gitignore  README.md  go.mod  test_abort_flow.sh  test_tx_flow.sh
(+89 files in other folders)
