[package]
name = "rocksdb-clone"
version = "0.1.0"
edition = "2021"
description = "A learning-focused implementation of a RocksDB-like key-value store in Rust"
repository = "https://github.com/kumarlokesh/sysd/tree/main/exercises/rocksdb-clone"
license = "MIT OR Apache-2.0"
authors = ["lkumar94@gmail.com"]

[features]
default = ["std"]
std = []

[dependencies]
thiserror = "1.0"
log = "0.4"
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.3"
bytes = "1.0"
crossbeam-channel = "0.5"
clap = { version = "4.0", features = ["derive"] }
bincode = { version = "2.0", features = ["serde"] }
tempfile = "3.3"

[dev-dependencies]
tempfile = "3.3"
rstest = "0.16.0"

[lib]
name = "rocksdb_clone"
path = "src/lib.rs"

[[bin]]
name = "rocksdb-cli"
path = "src/bin/cli.rs"
